<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ADMOB_APP_ID">ca-app-pub-7592042978177387~8954784157</string>
    <string name="AD_UNIT_PUBLISHER_ID_FULL_SCREEN_BANNER">ca-app-pub-7592042978177387/4948041754</string>
    <string name="AD_UNIT_PUBLISHER_ID_LOWER_BANNER">ca-app-pub-7592042978177387/4245382954</string>
    <string name="AD_UNIT_PUBLISHER_ID_LOWER_BANNER1">ca-app-pub-7592042978177387/9498545521</string>
    <string name="AD_UNIT_PUBLISHER_ID_LOWER_BANNER2">ca-app-pub-7592042978177387/3974756102</string>
    <string name="AD_UNIT_PUBLISHER_ID_LOWER_BANNER3">ca-app-pub-7592042978177387/2661674438</string>
    <string name="AD_UNIT_PUBLISHER_ID_NATIVE">ca-app-pub-7592042978177387/9745957530</string>
    <string name="AD_UNIT_PUBLISHER_ID_UPPER_BANNER" />
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="animalsGroupAll">All animals</string>
    <string name="animalsGroupFarm">Farm animals</string>
    <string name="animalsGroupInsects">Insects</string>
    <string name="animalsGroupLand">Land animals</string>
    <string name="animalsGroupMammals">Mammals</string>
    <string name="animalsGroupPet">Pet animals</string>
    <string name="animalsGroupReptilesAndAmphibians">Reptiles and Amphibians</string>
    <string name="animalsGroupSelectionTitle">Select a group:</string>
    <string name="animalsGroupWater">Water animals</string>
    <string name="animalsGroupWild">Wild animals</string>
    <string name="app_name">Animal Sounds</string>
    <string name="app_short_description">Meet new fascinating animals. 120+ Animal Sounds, wallpapers and ringtones.</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonOK">OK</string>
    <string name="buttonStart">Start</string>
    <string name="buttonSystem">System</string>
    <string name="buttonTryAgain">Try again</string>
    <string name="changeLangTitle">Select language</string>
    <string name="com.crashlytics.android.build_id">7201b2a17d4442918943c5591561a7ad</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="default_web_client_id">945820369577-u8praitdgvrnam7j9hfb5ejrrfo5eb6t.apps.googleusercontent.com</string>
    <string name="downloadFileName">/animals-%1$s-%2$02d.zip</string>
    <string name="downloadQuestion">Do you want to download pronunciation package?</string>
    <string name="downloadServerUrl">https://storage.googleapis.com/animalsounds2-eu.appspot.com</string>
    <string name="downloadXMLFileName">/animals-links-%1$03d.zip</string>
    <string name="emailClientNotInstalledTxt">There are no email clients installed.</string>
    <string name="errorMessageTitle">Error!</string>
    <string name="errorReport">Error report</string>
    <string name="fileDownloading">Downloading package. Please wait...</string>
    <string name="fileUnpacking">Unpacking file. Please wait...</string>
    <string name="firebase_database_url">https://admob-app-id-3399338551.firebaseio.com</string>
    <string name="gcm_defaultSenderId">945820369577</string>
    <string name="google_api_key">AIzaSyB-CIVZJFuFh7lPy_v-CIj9ptoDi8Q3J6E</string>
    <string name="google_app_id">1:945820369577:android:a73d48b62bcf07cd</string>
    <string name="google_crash_reporting_api_key">AIzaSyB-CIVZJFuFh7lPy_v-CIj9ptoDi8Q3J6E</string>
    <string name="google_storage_bucket">admob-app-id-3399338551.appspot.com</string>
    <string name="insuficientMemory">Insufficient memory.</string>
    <string name="internet_connection_error">No internet connection.</string>
    <string name="jezyk">Language</string>
    <string name="license_info">By using this application, you agree to its {0}Terms of Use and Privacy Policy{1}</string>
    <string name="like_list_empty">No favorites</string>
    <string name="lock">Lock</string>
    <string name="locked_info">Screen is locked</string>
    <string name="locked_long_info">Hold to unlock</string>
    <string name="mute_off">Mute off</string>
    <string name="mute_on">Mute on</string>
    <string name="noBtnTxt">No</string>
    <string name="noInternetConn">No Internet connection.</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="operationAborted">Operation aborted.</string>
    <string name="operationFailed">Operation failed.</string>
    <string name="otherAppStore">market://developer?id=Dream_Studio</string>
    <string name="otherAppUri">http://play.google.com/store/apps/developer?id=Dream_Studio</string>
    <string name="otherAppsTitle">More apps</string>
    <string name="otherIntentException">An error has occurred and the window can not be displayed.</string>
    <string name="permissionIntentException">An error has occurred and the permission window can not be displayed. You must grant application permissions in the system settings.</string>
    <string name="permissionNotGranted">Oops... without permission app can\'t set the ringtone!</string>
    <string name="playAppStore">market://details?id=</string>
    <string name="playAppUri">http://play.google.com/store/apps/details?id=</string>
    <string name="project_id">admob-app-id-3399338551</string>
    <string name="ptaki">Birds</string>
    <string name="quitExceptionDialogMessage">Something went wrong and the application will be closed.\10This information was sent to developer.</string>
    <string name="quitExceptionDialogTitle">Sorry.</string>
    <string name="quitQuestionTxt">Are you sure you want to quit?</string>
    <string name="rateBtnTxt">Rate 5 stars</string>
    <string name="rateQuestionTxt">If you like our app, please rate it 5 stars</string>
    <string name="removeAdView">Remove Ads</string>
    <string name="ringtoneSetErrorOccurred">An error has occurred, code:</string>
    <string name="ringtoneSetInsufficientMemory">Insufficient memory on SD card.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="sendErrorEmail">android.dream.studio@gmail.com</string>
    <string name="sendErrorTitle">%s - [%s][%d][%s][%s][%s][%s]</string>
    <string name="setRingtoneLongInfo">Hold to set</string>
    <string name="shareApp">Share</string>
    <string name="shareUsing">Share using</string>
    <string name="shuffle_info">Random</string>
    <string name="slideshow_start">Slideshow start</string>
    <string name="slideshow_stop">Slideshow stop</string>
    <string name="sort_info">Sorted</string>
    <string name="speakNameFirst">Say name first</string>
    <string name="speakNameLast">Say name last</string>
    <string name="speakNameNone">Don\'t say name</string>
    <string name="speakNameOnly">Say only name</string>
    <string name="speakNameTitle">Pronunciation options</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="success">Success</string>
    <string name="terms_of_use">Privacy &amp; Terms</string>
    <string name="turn_off_personalized_ads">Show non-personalized ads</string>
    <string name="typeAlarm">Set As Alarm Tone</string>
    <string name="typeContactRingtone">Set As Contact Ringtone</string>
    <string name="typeNotification">Set As SMS/Notification</string>
    <string name="typeRingtone">Set As Ringtone</string>
    <string name="typeWallpaper">Set Photo As Wallpaper</string>
    <string name="unlock">Unlock</string>
    <string name="unlocked_long_info">Hold to lock</string>
    <string name="welcome">Welcome</string>
    <string name="yesBtnTxt">Yes</string>
    <string name="zwierzeta">Animals</string>
</resources>
